venv_bootcamp_engdados/desafio_final/data_pipelines/logs/dag_id=get_pnadc_data_new/run_id=manual__2023-06-28T00:20:37-04:00/task_id=transfer_s3_to_rds/attempt=1.log
[2023-06-28T04:21:09.262+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_pnadc_data_new.transfer_s3_to_rds manual__2023-06-28T00:20:37-04:00 [queued]>
[2023-06-28T04:21:09.278+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_pnadc_data_new.transfer_s3_to_rds manual__2023-06-28T00:20:37-04:00 [queued]>
[2023-06-28T04:21:09.279+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-06-28T04:21:09.279+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-06-28T04:21:09.279+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-06-28T04:21:09.329+0000] {taskinstance.py:1309} INFO - Executing <Task(PythonOperator): transfer_s3_to_rds> on 2023-06-28 04:20:37+00:00
[2023-06-28T04:21:09.338+0000] {standard_task_runner.py:55} INFO - Started process 24246 to run task
[2023-06-28T04:21:09.343+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'get_pnadc_data_new', 'transfer_s3_to_rds', 'manual__2023-06-28T00:20:37-04:00', '--job-id', '216', '--raw', '--subdir', 'DAGS_FOLDER/get_pnadc_data_new.py', '--cfg-path', '/tmp/tmpkxi7mx_t']
[2023-06-28T04:21:09.346+0000] {standard_task_runner.py:83} INFO - Job 216: Subtask transfer_s3_to_rds
[2023-06-28T04:21:09.469+0000] {task_command.py:389} INFO - Running <TaskInstance: get_pnadc_data_new.transfer_s3_to_rds manual__2023-06-28T00:20:37-04:00 [running]> on host 8b415078c232
[2023-06-28T04:21:09.944+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=get_pnadc_data_new
AIRFLOW_CTX_TASK_ID=transfer_s3_to_rds
AIRFLOW_CTX_EXECUTION_DATE=2023-06-28T04:20:37+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-06-28T00:20:37-04:00
[2023-06-28T04:21:09.954+0000] {base.py:73} INFO - Using connection ID 'aws_conn' for task execution.
[2023-06-28T04:21:09.955+0000] {connection_wrapper.py:337} INFO - AWS Connection (conn_id='aws_conn', conn_type='aws') credentials retrieved from login and password.
[2023-06-28T04:21:11.835+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-06-28T04:21:14.284+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2056, in execute
    cur.execute(*args, **kwargs)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/scripts/send.py", line 37, in _send_from_s3_to_rds
    method=method
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/core/generic.py", line 2882, in to_sql
    method=method,
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 728, in to_sql
    **engine_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2225, in to_sql
    table.create()
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 856, in create
    if self.exists():
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 840, in exists
    return self.pd_sql.has_table(self.name, self.schema)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2236, in has_table
    return len(self.execute(query, [name]).fetchall()) > 0
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2068, in execute
    raise ex from exc
pandas.io.sql.DatabaseError: Execution failed on sql 'SELECT name FROM sqlite_master WHERE type='table' AND name=?;': syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^

[2023-06-28T04:21:14.336+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=get_pnadc_data_new, task_id=transfer_s3_to_rds, execution_date=20230628T042037, start_date=20230628T042109, end_date=20230628T042114
[2023-06-28T04:21:14.387+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 216 for task transfer_s3_to_rds (Execution failed on sql 'SELECT name FROM sqlite_master WHERE type='table' AND name=?;': syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^
; 24246)
[2023-06-28T04:21:14.424+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-06-28T04:21:14.494+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
